[gd_scene load_steps=3 format=3 uid="uid://huoghpc5br87"]

[ext_resource type="StyleBox" uid="uid://bsl01ijdjj0hn" path="res://event_editor/styles/node_style.tres" id="1_v21bx"]
[ext_resource type="Script" path="res://event_editor/nodes/read_ready_node/read_ready_gn.gd" id="2_3xe2t"]

[node name="ReadingModeNode" type="GraphNode"]
offset_left = 113.0
offset_top = 262.0
offset_right = 312.0
offset_bottom = 363.0
mouse_filter = 1
theme_override_colors/resizer_color = Color(0, 0.827451, 0, 1)
theme_override_styles/titlebar = ExtResource("1_v21bx")
title = "启动阅读模式"
ignore_invalid_connection_type = true
slot/0/left_enabled = true
slot/0/left_type = 2
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.839216, 0.533333, 0.184314, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.839216, 0.533333, 0.184314, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("2_3xe2t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="HSplitContainer3" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 40
dragger_visibility = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer3"]
layout_mode = 2
text = "标题"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer3"]
layout_mode = 2
placeholder_text = "请输入文本键"

[node name="HSplitContainer5" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer5"]
layout_mode = 2
text = "文本预览"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer5"]
layout_mode = 2
editable = false

[node name="HSplitContainer4" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 155
dragger_visibility = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer4"]
layout_mode = 2
text = "随时关闭"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer4"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "关闭时"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="Label2" type="Label" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
text = "页面"
